--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-# bwl-po
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Calculateur de paris PO - Raid</title>
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:20px;background:#f6f8fa;color:#111}
+    h1{font-size:22px}
+    label{display:block;margin-top:8px;font-weight:600}
+    input,select,button,textarea{padding:8px;margin-top:4px;border-radius:6px;border:1px solid #ccd}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .card{background:#fff;padding:12px;border-radius:10px;box-shadow:0 4px 10px rgba(20,30,40,0.05)}
+    table{width:100%;border-collapse:collapse;margin-top:8px}
+    th,td{padding:6px;border-bottom:1px solid #eee;text-align:left}
+    .muted{color:#666;font-size:13px}
+    .small{font-size:13px}
+  </style>
+</head>
+<body>
+  <h1>Calculateur de paris PO pour raid (Molten Core)</h1>
+  <p class="muted">Ajoute des parieurs (nom + mise 5-100 PO) et leurs prédictions. Ensuite saisis le résultat réel du raid et clique sur <strong>Calculer</strong> — le site répartira la cagnotte selon les critères.</p>
+
+  <div class="grid">
+    <div class="card">
+      <h2>1) Ajouter un parieur</h2>
+      <label>Nom / pseudo</label>
+      <input id="bettorName" placeholder="Pseudo du parieur" />
+      <label>Mise (5 - 100 PO)</label>
+      <input id="bettorStake" type="number" min="5" max="100" value="5" />
+
+      <label>Prédiction - Boss atteint</label>
+      <select id="bet_bossReached"></select>
+
+      <label>Prédiction - morts par boss (entier)</label>
+      <div id="predDeaths"></div>
+
+      <label>Prédiction - pseudo le + mort</label>
+      <input id="predMostDead" placeholder="Pseudo prévu" />
+
+      <label>Prédiction - top3 DPS Vaelastrasz (sépare par virgule)</label>
+      <input id="predTop3" placeholder="Joueur1, Joueur2, Joueur3" />
+
+      <label>Prédiction - item</label>
+      <select id="bet_item"></select>
+
+      <div style="margin-top:10px">
+        <button id="addBettor">Ajouter parieur</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>2) Cagnotte et parieurs</h2>
+      <label>Total cagnotte calculée (somme des mises) :</label>
+      <div id="totalPot" class="small">0 PO</div>
+
+      <table id="bettorsTable"><thead><tr><th>Nom</th><th>Mise</th><th>Actions</th></tr></thead><tbody></tbody></table>
+
+      <p class="muted">Tu peux modifier/supprimer un parieur en cliquant sur ses actions.</p>
+    </div>
+
+    <div class="card" style="grid-column:1/3">
+      <h2>3) Résultat réel du raid (à saisir quand le raid est fini)</h2>
+      <label>Boss atteint</label>
+      <select id="actual_bossReached"></select>
+
+      <label>Morts réelles par boss</label>
+      <div id="actualDeaths"></div>
+
+      <label>Pseudo le + mort (réel)</label>
+      <input id="actualMostDead" placeholder="Pseudo réel" />
+
+      <label>Top3 DPS sur Vaelastrasz (sépare par virgule)</label>
+      <input id="actualTop3" placeholder="Joueur1, Joueur2, Joueur3" />
+
+      <label>Objet tombé</label>
+      <select id="actual_item"></select>
+
+      <div style="margin-top:10px">
+        <button id="calculate">Calculer redistribution</button>
+        <button id="resetAll" style="margin-left:8px">Réinitialiser</button>
+      </div>
+
+      <h3>Résultats</h3>
+      <div id="results"></div>
+    </div>
+
+  </div>
+
+  <script>
+    // Boss list
+    const bosses = ["Razorgore","Vaelastrasz","Broodlord","Firemaw","Ebonroc","Flamegor","Chromaggus","Nefarian"]
+    const items = ["Help of endless rage","Maladath","Rejuvenating gem","Shadow wing focus staff","Drake fang","Dragon's touch","Ashje'thul","RIEN DU TOUT"]
+
+    // Populate selects
+    function populateSelects(){
+      const bossReached = document.querySelectorAll('#bet_bossReached, #actual_bossReached')
+      bossReached.forEach(s=>{
+        s.innerHTML = ''
+        bosses.forEach(b=>{
+          const o = document.createElement('option'); o.value = b; o.textContent = b; s.appendChild(o)
+        })
+      })
+      const bet_item = document.getElementById('bet_item')
+      const actual_item = document.getElementById('actual_item')
+      items.forEach(i=>{[bet_item, actual_item].forEach(s=>{const o=document.createElement('option');o.value=i;o.textContent=i;s.appendChild(o)})})
+
+      // deaths inputs for predictions and actual
+      const predDeaths = document.getElementById('predDeaths')
+      const actualDeaths = document.getElementById('actualDeaths')
+      predDeaths.innerHTML=''
+      actualDeaths.innerHTML=''
+      bosses.forEach(b=>{
+        const wrap1 = document.createElement('div'); wrap1.className='small';
+        wrap1.innerHTML = `<label style="font-weight:600;margin-top:8px">${b} - morts prévues</label><input data-boss="${b}" type='number' min='0' value='0' class='deathInput' />`
+        predDeaths.appendChild(wrap1)
+        const wrap2 = document.createElement('div'); wrap2.className='small';
+        wrap2.innerHTML = `<label style="font-weight:600;margin-top:8px">${b} - morts réelles</label><input data-boss="${b}" type='number' min='0' value='0' class='actualDeathInput' />`
+        actualDeaths.appendChild(wrap2)
+      })
+    }
+
+    populateSelects()
+
+    // bettors storage
+    let bettors = []
+
+    function updateTable(){
+      const tbody = document.querySelector('#bettorsTable tbody'); tbody.innerHTML=''
+      bettors.forEach((p, idx)=>{
+        const tr = document.createElement('tr')
+        tr.innerHTML = `<td>${p.name}</td><td>${p.stake} PO</td><td><button data-i='${idx}' class='remove'>Suppr</button></td>`
+        tbody.appendChild(tr)
+      })
+      document.getElementById('totalPot').textContent = bettors.reduce((s,b)=>s+b.stake,0) + ' PO'
+      document.querySelectorAll('.remove').forEach(btn=>btn.addEventListener('click',e=>{bettors.splice(+e.target.dataset.i,1);updateTable()}))
+    }
+
+    document.getElementById('addBettor').addEventListener('click', ()=>{
+      const name = document.getElementById('bettorName').value.trim()
+      const stake = parseInt(document.getElementById('bettorStake').value || '0')
+      if(!name){alert('Donne un pseudo pour le parieur.');return}
+      if(isNaN(stake) || stake < 5 || stake > 100){alert('La mise doit être entre 5 et 100 PO.');return}
+      // collect predictions
+      const predBoss = document.getElementById('bet_bossReached').value
+      const deathsInputs = [...document.querySelectorAll('#predDeaths input')]
+      const predDeaths = {}
+      deathsInputs.forEach(i=>predDeaths[i.dataset.boss]=parseInt(i.value||'0'))
+      const predMostDead = document.getElementById('predMostDead').value.trim()
+      const predTop3 = document.getElementById('predTop3').value.split(',').map(s=>s.trim()).filter(Boolean)
+      const predItem = document.getElementById('bet_item').value
+
+      bettors.push({name, stake, preds:{boss:predBoss, deaths:predDeaths, mostDead:predMostDead, top3:predTop3, item:predItem}})
+      // clear inputs except predictions to allow batch adding
+      document.getElementById('bettorName').value=''
+      document.getElementById('bettorStake').value='5'
+      updateTable()
+    })
+
+    document.getElementById('calculate').addEventListener('click', ()=>{
+      if(bettors.length===0){alert('Ajoute au moins un parieur.');return}
+      // gather actuals
+      const actualBoss = document.getElementById('actual_bossReached').value
+      const actualDeathsInputs = [...document.querySelectorAll('#actualDeaths input')]
+      const actualDeaths = {}
+      actualDeathsInputs.forEach(i=>actualDeaths[i.dataset.boss]=parseInt(i.value||'0'))
+      const actualMostDead = document.getElementById('actualMostDead').value.trim()
+      const actualTop3 = document.getElementById('actualTop3').value.split(',').map(s=>s.trim()).filter(Boolean)
+      const actualItem = document.getElementById('actual_item').value
+
+      // weights (sum 100)
+      const weights = {
+        bossReached: 30, // %
+        deathsTotal: 10, // distributed equally across bosses
+        mostDead: 15,
+        top3Vaela: 25,
+        item: 20
+      }
+
+      const totalPot = bettors.reduce((s,b)=>s+b.stake,0)
+
+      // helper functions
+      function eqNamesSet(a,b){ if(!a || !b) return false; const sa = a.map(x=>x.toLowerCase()).sort(); const sb = b.map(x=>x.toLowerCase()).sort(); if(sa.length!==sb.length) return false; for(let i=0;i<sa.length;i++) if(sa[i]!==sb[i]) return false; return true }
+
+      // accumulate payouts per bettor
+      const payouts = bettors.map(b=>({name:b.name, payout:0}))
+
+      // 1) bossReached
+      const bossPot = totalPot * (weights.bossReached/100)
+      const winnersBoss = bettors.filter(b=>b.preds.boss === actualBoss)
+      if(winnersBoss.length>0){ const share = bossPot / winnersBoss.length; winnersBoss.forEach(w=>{ const p = payouts.find(x=>x.name===w.name); p.payout+=share }) }
+
+      // 2) deaths - distribute deathsTotal equally per boss
+      const perBossWeight = weights.deathsTotal / bosses.length
+      bosses.forEach(boss=>{
+        const bossPotShare = totalPot * (perBossWeight/100)
+        const winners = bettors.filter(p=> (p.preds.deaths[boss] === actualDeaths[boss]))
+        if(winners.length>0){ const share = bossPotShare / winners.length; winners.forEach(w=>{ const p = payouts.find(x=>x.name===w.name); p.payout+=share }) }
+      })
+
+      // 3) mostDead
+      const mostDeadPot = totalPot * (weights.mostDead/100)
+      const winnersMost = bettors.filter(b=> b.preds.mostDead && b.preds.mostDead.toLowerCase() === actualMostDead.toLowerCase())
+      if(winnersMost.length>0){ const share = mostDeadPot / winnersMost.length; winnersMost.forEach(w=>{ const p = payouts.find(x=>x.name===w.name); p.payout+=share }) }
+
+      // 4) top3 Vaelastrasz
+      const top3Pot = totalPot * (weights.top3Vaela/100)
+      const winnersTop3 = bettors.filter(b=> eqNamesSet(b.preds.top3, actualTop3))
+      if(winnersTop3.length>0){ const share = top3Pot / winnersTop3.length; winnersTop3.forEach(w=>{ const p = payouts.find(x=>x.name===w.name); p.payout+=share }) }
+
+      // 5) item
+      const itemPot = totalPot * (weights.item/100)
+      const winnersItem = bettors.filter(b=> b.preds.item === actualItem)
+      if(winnersItem.length>0){ const share = itemPot / winnersItem.length; winnersItem.forEach(w=>{ const p = payouts.find(x=>x.name===w.name); p.payout+=share }) }
+
+      // show results
+      const resDiv = document.getElementById('results'); resDiv.innerHTML=''
+      const h = document.createElement('div')
+      h.innerHTML = `<p class='muted'>Cagnotte totale: <strong>${totalPot} PO</strong></p>`
+      resDiv.appendChild(h)
+
+      const table = document.createElement('table')
+      table.innerHTML = `<thead><tr><th>Parieur</th><th>Mise</th><th>Gain calculé</th><th>Net (gain - mise)</th></tr></thead>`
+      const tb = document.createElement('tbody')
+      payouts.forEach(p=>{
+        const original = bettors.find(b=>b.name===p.name).stake
+        const net = (p.payout - original)
+        const tr = document.createElement('tr')
+        tr.innerHTML = `<td>${p.name}</td><td>${original} PO</td><td>${Math.round(p.payout*100)/100} PO</td><td>${Math.round(net*100)/100} PO</td>`
+        tb.appendChild(tr)
+      })
+      table.appendChild(tb)
+      resDiv.appendChild(table)
+
+      // show per-criterion summary
+      const summary = document.createElement('div'); summary.style.marginTop='10px'
+      summary.innerHTML = `<h4>Résumé par critère (poids)</h4>
+        <ul>
+          <li>Boss atteint (${weights.bossReached}%): pot ${Math.round(bossPot*100)/100} PO — gagnants: ${winnersBoss ? winnersBoss.length : 0}</li>
+          <li>Morts (total ${weights.deathsTotal}% -> ${Math.round((weights.deathsTotal/bosses.length)*100)/100}% par boss)</li>
+          <li>Most dead (${weights.mostDead}%): pot ${Math.round(mostDeadPot*100)/100} PO — gagnants: ${winnersMost.length}</li>
+          <li>Top3 Vaelastrasz (${weights.top3Vaela}%): pot ${Math.round(top3Pot*100)/100} PO — gagnants: ${winnersTop3.length}</li>
+          <li>Item (${weights.item}%): pot ${Math.round(itemPot*100)/100} PO — gagnants: ${winnersItem.length}</li>
+        </ul>`
+      resDiv.appendChild(summary)
+
+      // debug: list bosses winners per boss
+      const deathsDebug = document.createElement('div'); deathsDebug.innerHTML = '<h5>Morts par boss - gagnants (par boss)</h5>'
+      bosses.forEach(b=>{
+        const winners = bettors.filter(p=> p.preds.deaths[b] === actualDeaths[b]).map(x=>x.name)
+        const p = document.createElement('div'); p.className='small'; p.textContent = `${b}: ${winners.length>0 ? winners.join(', ') : '—'}`
+        deathsDebug.appendChild(p)
+      })
+      resDiv.appendChild(deathsDebug)
+
+    })
+
+    document.getElementById('resetAll').addEventListener('click', ()=>{ if(confirm('Réinitialiser tout ?')){bettors=[]; updateTable(); document.getElementById('results').innerHTML=''; // reset inputs
+      document.querySelectorAll('#predDeaths input, #actualDeaths input').forEach(i=>i.value='0'); document.getElementById('actualMostDead').value=''; document.getElementById('actualTop3').value=''; document.getElementById('actual_item').value=items[0]; document.getElementById('bet_item').value=items[0]; } })
+
+    // initial table
+    updateTable()
+  </script>
+</body>
+</html>
